fix person swagger
